# mathlab

mathengine/include/algebra/: complex.h
mathengine/include/core/: numeric.h
mathengine/include/functions/exp/: exp.h
mathengine/include/functions/trigo/: sin.h
mathengine/include/lib/: error.h  io.h  math.h
mathengine/src/algebra/: complex.cpp
mathengine/src/core/: numeric.cpp
mathengine/src/functions/: functions.cpp
mathengine/src/functions/exp/: exp.cpp
mathengine/src/functions/trigo/: cos.cpp  sin.cpp  tan.cpp  trigo.cpp
mathengine/tests/include/matlab_test/: util.h
mathengine/tests/mathlab/algebra/complex/: test_complex.cpp
mathlab engine/include/mathlab/: libs.h
mathlab engine/include/mathlab/algebra/: complex.h  complex_spec.txt
mathlab engine/include/mathlab/core/: numeric.h
mathlab engine/include/mathlab/functions/: functions.h
mathlab engine/include/mathlab/functions/exp/: exp.h
mathlab engine/include/mathlab/functions/trigo/: cos.h  sin.h  tan.h  (+1 more)
mathlab engine/src/mathlab/algebra/: complex.cpp
mathlab engine/src/mathlab/core/: numeric.cpp
mathlab engine/src/mathlab/functions/: functions.cpp
mathlab engine/tests/: CMakeLists.txt
mathlab engine/tests/include/matlab_test/: util.h
mathlab engine/tests/include/matlab_test/algebra_test/complex_test/: test_complex.h  test_complex_abs.h  test_complex_getters.h  test_complex_self_mult.h  test_complex_to_string.h
mathlab engine/tests/mathlab/algebra/complex/test_complex/: test_complex_getters.cpp  test_to_complex_to_string.cpp
mathlab engine/tests/mathlab/util/: util.cpp
(+9 files in other folders)
